Method invokes inefficient Number constructor; will now use static valueOf instead