@@ -49,7 +49,7 @@ public class CTCSubElementPackager extends ISOBaseValidatingPackager {
             Map tab = c.getChildren();
             StringBuffer sb = new StringBuffer();
             for ( int i = 0; i < fld.length; i++ ) {
-                ISOMsg f = (ISOMsg) tab.get (new Integer(i));
+                ISOMsg f = (ISOMsg) tab.get (Integer.valueOf(i));
                 if ( f != null ) {
                     sb.append ( ISOUtil.zeropad( ((Integer)f.getKey()).toString(), 2 ) + new String( fld[i].pack( f ) ) );
                 }
@@ -98,7 +98,7 @@ public class CTCSubElementPackager extends ISOBaseValidatingPackager {
         try {
             Map tab = c.getChildren();
             for ( int i = 0; i < fldVld.length; i++ ) {
-                ISOMsg f = (ISOMsg) tab.get (new Integer(i));
+                ISOMsg f = (ISOMsg) tab.get (Integer.valueOf(i));
                 if ( f != null )
                     c.set( (ISOMsg)fldVld[i].validate( f ) );
             }
