@@ -161,7 +161,7 @@ public class FSDMsg implements Loggeable, Cloneable {
      *  @param separator       char representing type
      */
     public void setSeparator(String separatorName, char separator) {
-        separators.put(separatorName,new Character(separator));
+        separators.put(separatorName, Character.valueOf(separator));
     }
     
     /*
@@ -314,7 +314,7 @@ public class FSDMsg implements Loggeable, Cloneable {
     }
     
     public boolean isSeparator(byte b) {
-        return separators.containsValue(new Character((char)b));
+        return separators.containsValue( Character.valueOf((char)b));
     }
     
     private String getSeparatorType(String type) {
